--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ footer{
 h3{
     font-size: 28px;
     margin-bottom: 15px;
-    text-align: left;
+    padding: 0px 40px 50px 0px;
 }
 .footer-content p{
     width:190px;
