--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,11 @@ h3{
     margin-bottom: 15px;
     padding: 0px 40px 50px 0px;
 }
+p{
+    padding: 0px 40px 50px 0px;
+    
+}
+
 .footer-content p{
     width:190px;
     margin: auto;
