--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,10 @@ h4{
     padding: 30px 40px 50px 50px;
     
 }
+.list{
+    padding: 30px 40px 50px 50px;
+    
+}
 
 .footer-content p{
     width:190px;
