--- a/styles.css
+++ b/styles.css
@@ -123,17 +123,8 @@ footer{
 h3{
     font-size: 28px;
     margin-bottom: 15px;
-    padding: 0px 40px 50px 0px;
+    text-align: center;
 }
-h4{
-    padding: 30px 40px 50px 50px;
-    
-}
-.list{
-    padding: 30px 40px 50px 50px;
-    
-}
-
 .footer-content p{
     width:190px;
     margin: auto;
